--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 body {
-background: lightblue;
-color: white;
+    background: lightblue;
+    color: white;
+}
+
+.mncm {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 21px;
 }
