--- a/style.css
+++ b/style.css
@@ -1,9 +1,48 @@
-body {
-    background: lightblue;
-    color: white;
+/* #f26574 orangish*/
+
+
+/* #333e48 grayish*/
+
+@font-face {
+    src: url(fonts/handelGothic.ttf);
+    font-family: handelGothic;
 }
 
-.mncm {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 21px;
+header {
+    font-family: handelGothic;
+    font-size: 46px;
+    text-align: center;
+}
+
+body {
+    font-family: handelGothic;
+    background: #333e48;
+    color: rgba(255, 255, 255, 1);
+}
+
+footer {
+    font-size: 16px;
+    text-align: center;
+}
+
+.intro {
+    text-align: center;
+}
+
+.boxes {
+    display: flex;
+}
+
+.box {
+    width: 400px;
+    height: 400px;
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    border: solid 5px #f26574;
+}
+
+.img {
+    max-height: 80%;
+    max-width: 80%;
 }
