--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 /* #333e48 grayish*/
 
 @font-face {
-    src: url(fonts/handelGothic.ttf);
+    src: url(/fonts/handelGothic.ttf);
     font-family: handelGothic;
 }
 
