--- a/style.css
+++ b/style.css
@@ -3,59 +3,96 @@
 
 /* #333e48 grayish*/
 
-@font-face {
-    src: url(fonts/handelGothic.ttf);
-    font-family: handelGothic;
-}
-
 header {
-    font-family: handelGothic;
+    font-family: monospace;
     font-size: 46px;
     text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 body {
-    font-family: handelGothic;
-    background: #333e48;
-    color: rgba(255, 255, 255, 1);
+    font-family: monospace;
+    background: #f0f1f7;
+    color: rgb(102, 85, 85);
 }
 
-footer {
-    font-size: 16px;
+h1 {
     text-align: center;
+    margin-top: 100px;
 }
 
-.intro {
-    text-align: center;
+.logo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    height: 40%;
 }
 
-.boxes {
+.flip-box-container {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: auto;
+    margin-bottom: 100px;
+}
+
+.flip-box {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin: auto;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-box-front,
+.flip-box-back {
+    position: absolute;
+    display: flex;
     justify-content: center;
-}
-
-.box {
-    width: 400px;
-    height: 400px;
-    text-align: center;
-    padding: 20px;
-    margin: 20px;
-    border: solid 5px #f26574;
-}
-
-.boxtext {
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: auto;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     text-align: center;
 }
 
-.img {
-    max-height: 80%;
-    max-width: 80%;
+.flip-box-front {
+    background-color: rgb(43, 36, 23);
+    color: rgb(197, 176, 176);
+}
+
+.flip-box-back {
+    background-color: #fff;
+    color: rgb(39, 38, 38);
+    transform: rotateY(180deg);
 }
 
 .forms {
     text-align: center;
     margin-bottom: 20px;
+}
+
+footer {
+    text-align: center;
 }
 
 .projects {
