--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@ h1 {
     height: 40%;
 }
 
+.sociallogo {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    width: 20px;
+    height: 20px;
+}
+
 .flip-box-container {
     display: flex;
     flex-wrap: wrap;
